# automation-demo

./: .pre-commit-config.yaml  .yamlfmt  README.md  __init__.py  pyproject.toml  tmp.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_improvement.yml  feature_request.yml
.github/workflows/: auto-approve.yml  linting.yml  new_pr.yml  testing.yml  update_dev_version.yml  update_dev_version_manual.yml
