[tool.poetry]
name = "automation-demo"
version = "0.1.0"
description = ""
authors = ["Sam Vente <savente93@gmail.com>"]
readme = "README.md"
packages = [{include = "automation_demo"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
