[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automation-demo"
authors = [
    { name = "Sam Vente", email = "savente93@gmail.com" },
]
dependencies = [
]

requires-python = ">=3.9"
dynamic = ['version', 'description']

[project.optional-dependencies]

[tool.make_env]
channels = ["conda-forge"]
deps_not_in_conda  = [
    "sphinx_autosummary_accessors",
    "sphinx_design",
    "pyet",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["docs"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D103", "D100", "D104"]
"hydromt/__init__.py" = ["E402", "F401", "F403"]
"hydromt/workflows/__init__.py" = ["F403"]
"hydromt/stats/__init__.py" = ["F403"]
"hydromt/models/__init__.py" = ["F403", "F401", "F405"]
"hydromt/_compat.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "numpy"
