[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automation-demo"
authors = [
    { name = "Sam Vente", email = "savente93@gmail.com" },
]
dependencies = [
]

requires-python = ">=3.9"
dynamic = ['version', 'description']

[project.optional-dependencies]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["docs"]

[tool.ruff.pydocstyle]
convention = "numpy"
